# marketmenow

./: .env.example  .gitignore  .twitter_top_examples.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  openclaw.plugin.json  pyproject.toml  replies_20260317_070842.csv
.cursor/rules/: adapters.mdc  core.mdc  docs-maintenance.mdc  marketmenow.mdc  prompts.mdc  web.mdc
campaigns/: reddit-launch.example.yaml  twitter-outreach.example.yaml
openclaw/: tools.json
openclaw/skills/: marketing.md
projects/gradeasy/: generation_config.yaml  project.yaml  topics.yaml
projects/gradeasy/prompts/: persona.yaml
projects/gradeasy/targets/: facebook.yaml
prompts/: prompt.md
prompts/email/: paraphrase.yaml
prompts/instagram/: autograde.yaml  carousel_top5.yaml  generate_rubric.yaml  script_generation.yaml
prompts/linkedin/: batch_generation.yaml
prompts/reddit/: comment_generation.yaml
prompts/twitter/: reply_generation.yaml  thread_generation.yaml
src/adapters/: CLAUDE.md
src/marketmenow/: CLAUDE.md  __init__.py  cli.py  distribution_defaults.yaml  exceptions.py  normaliser.py  registry.py
src/web/: CLAUDE.md  app.py  cli_runner.py  config.py  credentials.py  db.py  deps.py  events.py  queue_worker.py
tests/: conftest.py  test_cli.py  test_cli_runner.py  test_content_generator_linkedin.py  test_credentials.py  test_custom_workflows.py  test_discover_posts.py  test_diversity_selector.py  test_email_sender.py  test_embedding_store.py  test_facebook_engage.py  test_feedback_orchestrator.py  test_flows_routes.py  test_guideline_generator.py  test_models_campaign.py  test_models_distribution.py  test_orchestrator.py  test_project.py  test_project_templates.py  test_prompt_builder.py  test_prompt_resolution.py  test_reddit_launch_config.py  test_reddit_post_generator.py  test_reel_id.py  test_renderer_instagram.py  test_renderer_linkedin.py  test_sentiment.py  test_step_registry.py  test_template_classifier.py  test_template_loader.py  test_text_sanitiser.py  test_tiktok_adapter.py  test_web_cli_runner_facebook.py  test_web_project.py  test_web_routes.py  test_workflow.py  test_workflow_registry.py  test_youtube_analytics.py
(+208 files in other folders)
